# Spotdark

./: CMakeLists.txt  README.md  appFinder.c++  appFinder.h  input.cpp  input.h  launcher.cpp  main.cpp  print..c++  print.h  searchApps.c++  systemDetection.c++  systemDetection.h
linux/: AppManager.cpp  AppManager.h  main  main.cpp
